# Chronicle

./: .gitignore  CHRONICLE_STATUS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
benches/: storage_bench.rs
chronicle-ui/: Cargo.toml  Trunk.toml  index.html
chronicle-ui/src/: app.rs  main.rs
chronicle-ui/src/api/: client.rs  mod.rs
chronicle-ui/src/components/: chart.rs  data_entry.rs  insight_card.rs  loading.rs  metric_card.rs  mod.rs  nav.rs  toast.rs
chronicle-ui/src/pages/: dashboard.rs  insights.rs  metrics.rs  mod.rs  settings.rs
chronicle-ui/src/state/: global.rs  mod.rs  websocket.rs
src/: config.rs  lib.rs  main.rs
src/api/: dto.rs  error.rs  mod.rs  state.rs
src/api/routes/: apple_health.rs  correlations.rs  export.rs  health.rs  ingest.rs  insights.rs  metrics.rs  mod.rs  query.rs  sync.rs
src/index/: manager.rs  metric_index.rs  mod.rs  tag_index.rs  time_index.rs
src/integrations/: csv_import.rs  fitbit.rs  github.rs  mod.rs  scheduler.rs
src/memmachine/: client.rs  correlations.rs  insights.rs  mod.rs  sync.rs
src/query/: ast.rs  error.rs  executor.rs  mod.rs  parser.rs
src/storage/: compression.rs  engine.rs  error.rs  mod.rs  segment.rs  types.rs  wal.rs
src/websocket/: handler.rs  hub.rs  messages.rs  mod.rs
