[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"
description = "Personal Time-Series Intelligence - A full-stack Rust application for storing, querying, and analyzing personal time-series data"
authors = ["Chronicle Team"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database (for indexes)
rusqlite = { version = "0.31", features = ["bundled"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Compression
lz4_flex = "0.11"

# HTTP client (for MemMachine and integrations)
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
toml = "0.8"
dirs = "5.0"

# CSV import
csv = "1.3"

# Integrations
async-trait = "0.1"
urlencoding = "2.1"

# Quick XML parsing (for Apple Health)
quick-xml = { version = "0.31", features = ["serialize"] }

# ZIP archive support (for Apple Health export)
zip = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CRC for checksums
crc32fast = "1.3"

# Query parsing
nom = "7.1"

# UUID for request IDs
uuid = { version = "1.6", features = ["v4"] }

# Regex for time parsing
regex = "1.10"

# Memory mapping (optional, for future optimization)
memmap2 = "0.9"

# Async stream utilities (for WebSocket)
futures-util = { version = "0.3", features = ["sink"] }

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bin]]
name = "chronicle"
path = "src/main.rs"

[[bin]]
name = "chronicle-api"
path = "src/bin/api.rs"

[[bin]]
name = "chronicle-cli"
path = "src/bin/cli.rs"

[[bench]]
name = "storage_bench"
harness = false
